[porz] fix placeholder color on firefox

--- a/src/app/all-booking/all-booking.component.css
+++ b/src/app/all-booking/all-booking.component.css
@@ -87,8 +87,11 @@
 ::ng-deep nz-date-picker ::placeholder,
 ::ng-deep nz-time-picker ::placeholder,
 ::ng-deep .ant-select-selection-placeholder,
+::ng-deep ::-webkit-input-placeholder,
+::ng-deep ::-moz-placeholder,
 ::ng-deep .ant-select-single.ant-select-open .ant-select-selection-item {
     color: #000000 !important;
+    opacity: 1;
 }
 
 ::ng-deep .ant-select:not(.ant-select-customize-input) .ant-select-selector {
